# HSE-Industrial-Software-Engineering

./: .clang-format  .gitignore  CMakeLists.txt  README.md
backup/: CMakeLists.txt  README.md
backup/include/backup/: backup_manager.hpp
backup/src/: main.cpp
backup/src/backup/: backup_manager.cpp
dish-washing/: CMakeLists.txt  README.md  dirty_dishes.txt  washer_process.txt  wiper_process.txt
dish-washing/include/utils/: consts.hpp
dish-washing/include/washer/: washer.hpp
dish-washing/include/wiper/: wiper.hpp
dish-washing/src/: main.cpp
dish-washing/src/washer/: washer.cpp
dish-washing/src/wiper/: wiper.cpp
parallel-factorial/: CMakeLists.txt  README.md
parallel-factorial/processes/: CMakeLists.txt
parallel-factorial/processes/src/: main.cpp
parallel-factorial/threads/: CMakeLists.txt
parallel-factorial/threads/src/: main.cpp
parallel-merge-sort/: CMakeLists.txt  README.md  array_of_numbers.txt
parallel-merge-sort/include/merge-sort/: thread_sorter.hpp
parallel-merge-sort/src/: main.cpp
runsim/: CMakeLists.txt  README.md
runsim/include/runsim/: runner.hpp
runsim/src/: main.cpp
runsim/src/runsim/: runner.cpp
useless/: CMakeLists.txt  README.md  test_file.txt  test_script2.sh  test_script3.sh
useless/include/useless/: useless.hpp
useless/src/: main.cpp
useless/src/useless/: useless.cpp
